[gd_scene load_steps=13 format=2]

[ext_resource path="res://scripts/World.gd" type="Script" id=1]
[ext_resource path="res://scenes/SpawnLoc.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/bg.png" type="Texture" id=4]
[ext_resource path="res://scripts/background.gd" type="Script" id=5]
[ext_resource path="res://music/Gameplay.ogg" type="AudioStream" id=6]
[ext_resource path="res://assets/Boxy-Bold.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://scripts/score.gd" type="Script" id=8]

[sub_resource type="Shader" id=3]
code = "shader_type canvas_item;
uniform float scroll_speed;
void fragment(){
    vec2 shifteduv = UV;
    shifteduv .y -= TIME * scroll_speed;
    vec4 color = texture(TEXTURE, shifteduv);
    COLOR = color;
}"

[sub_resource type="ShaderMaterial" id=2]
shader = SubResource( 3 )
shader_param/scroll_speed = null

[sub_resource type="DynamicFont" id=4]
size = 26
font_data = ExtResource( 7 )

[sub_resource type="Theme" id=5]
default_font = SubResource( 4 )

[node name="World" type="Node2D"]
script = ExtResource( 1 )

[node name="SpawnTimer" type="Timer" parent="."]
autostart = true

[node name="TextureRect" type="TextureRect" parent="."]
material = SubResource( 2 )
margin_top = -80.0
margin_right = 1200.0
margin_bottom = 720.0
rect_scale = Vector2( 0.88, 0.862164 )
texture = ExtResource( 4 )
stretch_mode = 2
script = ExtResource( 5 )

[node name="Position2D" type="Position2D" parent="." groups=["spawn"]]
position = Vector2( 2, -46 )

[node name="Position2D8" type="Position2D" parent="." groups=["spawn"]]
position = Vector2( 0, 128 )

[node name="Position2D9" type="Position2D" parent="." groups=["spawn"]]
position = Vector2( 0, 256 )

[node name="Position2D2" type="Position2D" parent="." groups=["spawn"]]
position = Vector2( 258, -46 )

[node name="Position2D3" type="Position2D" parent="." groups=["spawn"]]
position = Vector2( 514, -46 )

[node name="Position2D4" type="Position2D" parent="." groups=["spawn"]]
position = Vector2( 770, -46 )

[node name="Position2D5" type="Position2D" parent="." groups=["spawn"]]
position = Vector2( 1026, -46 )

[node name="Position2D6" type="Position2D" parent="." groups=["spawn"]]
position = Vector2( 1024, 128 )

[node name="Position2D7" type="Position2D" parent="." groups=["spawn"]]
position = Vector2( 1024, 256 )

[node name="SpawnLoc" parent="." instance=ExtResource( 2 )]
position = Vector2( 0, -48 )

[node name="Player" parent="." instance=ExtResource( 3 )]
position = Vector2( 512, 416 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 512, 272 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -5.0
autoplay = true
mix_target = 2

[node name="ui" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="score" type="Label" parent="ui"]
margin_left = 20.0
margin_top = 559.0
margin_right = 311.0
margin_bottom = 589.0
rect_pivot_offset = Vector2( 143, 15 )
theme = SubResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "SCORE : 0"
script = ExtResource( 8 )

[connection signal="timeout" from="SpawnTimer" to="." method="_on_SpawnTimer_timeout"]
